# AutoAIApply

./: LICENSE  README.md  hello.py  main.py  pyproject.toml
data/: links.txt  notion_db_schema.json
src/ai/: gen_app.py  gen_email.py
src/email/: gmail.py
src/notion/: database.py
src/summary/: print.py  summary.txt
src/utils/: redirector.py
src/web/: application.py  login.py
utils/ai/: gen_app.py  gen_email.py
utils/email/: gmail.py
utils/notion/: ref.md
utils/web/: application.py
